--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="zh-Hant">
 <head>
+    <meta charset="UTF-8">
     <title>我的第一個 GitHub Pages</title>
 </head>
 <body>
     <h1>哈囉！這是我的 GitHub Pages</h1>
     <p>Day 22 學習成功！</p>
-    <img src="images/first.jpg" alt="我的照片">
+    <img src="images/first.jpg" alt="我的照片" width="300">
 </body>
 </html>
