--- a/index.html
+++ b/index.html
@@ -3,33 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <title>我的第一個 GitHub Pages</title>
-    <style>
-        body {
-            font-family: "Microsoft JhengHei", Arial, sans-serif;
-            background: linear-gradient(to right, #fbc2eb, #a6c1ee);
-            text-align: center;
-            color: #333;
-            margin: 0;
-            padding: 50px 20px;
-        }
-        h1 {
-            font-size: 2.5em;
-            margin-bottom: 20px;
-        }
-        p {
-            font-size: 1.2em;
-            margin-bottom: 30px;
-        }
-        img {
-            width: 300px;
-            border-radius: 10px;
-            box-shadow: 0 4px 8px rgba(0,0,0,0.2);
-        }
-    </style>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <h1>哈囉！這是我的 GitHub Pages</h1>
-    <p>Day 25 學習成功！!</p>
-    <img src="images/first.jpg" alt="我的照片">
+    <header>
+        <h1>哈囉！這是我的 GitHub Pages</h1>
+    </header>
+    <main>
+        <p>Day 22 學習成功！</p>
+        <img src="images/first.jpg" alt="我的照片" width="300">
+    </main>
+    <footer>
+        <p>© 2025 Sharon 的作品練習</p>
+    </footer>
 </body>
 </html>
